refactor(sysconfig): FFmpeg 설정 제거 — V2.0 마킹 필수 전환
V2.0에서 마킹이 항상 존재(자동/수동)하므로 FFMPEG_THREADS/FFMPEG_OUTPUT_FPS
설정과 extract()/extractBoth() 폴백 경로가 dead code가 되어 제거.
BatchOrchestrator는 마킹 없으면 INVALID_INPUT 예외 발생.

Changes:
- ConfigKeys: FFMPEG_THREADS, FFMPEG_OUTPUT_FPS 키 제거
- FfmpegFrameExtractor: extract/extractBoth/getOutputFps 제거, extractByMarks만 유지
- BatchOrchestrator: extractBoth 폴백 분기 → 마킹 필수 검증으로 변경
- FFmpegConfigCard.tsx: 파일 삭제
- SystemSettingsPage: FFmpeg 카드 렌더링 제거
- V48 Flyway: LS_SYSTEM_CONFIG에서 FFmpeg 키 2행 DELETE
- 테스트: dead code 테스트 21건 제거, 마킹 필수 테스트 추가

Generated with Claude Code